// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem should render correctly when it's a link 1`] = `
<a
  className="jsx-3275355419 active"
  href="https://github.com/adbayb/xspeedit"
  target="_blank"
>
  <Icon
    height={24}
    name="github"
    width={24}
  />
  <JSXStyle
    css="a.jsx-3275355419{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex:1;-ms-flex:1;flex:1;cursor:pointer;-webkit-transition:background-color 500ms;transition:background-color 500ms;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;}.active.jsx-3275355419{background-color:#34b7b6;}"
    styleId="3275355419"
  />
</a>
`;

exports[`MenuItem should render correctly when it's active 1`] = `
<a
  className="jsx-3275355419 active"
  onClick={[Function]}
  role="button"
>
  <Icon
    height={24}
    name="github"
    width={24}
  />
  <JSXStyle
    css="a.jsx-3275355419{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex:1;-ms-flex:1;flex:1;cursor:pointer;-webkit-transition:background-color 500ms;transition:background-color 500ms;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;}.active.jsx-3275355419{background-color:#34b7b6;}"
    styleId="3275355419"
  />
</a>
`;

exports[`MenuItem should render correctly when it's not active 1`] = `
<a
  className="jsx-3275355419 "
  onClick={[Function]}
  role="button"
>
  <Icon
    height={24}
    name="github"
    width={24}
  />
  <JSXStyle
    css="a.jsx-3275355419{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex:1;-ms-flex:1;flex:1;cursor:pointer;-webkit-transition:background-color 500ms;transition:background-color 500ms;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;}.active.jsx-3275355419{background-color:#34b7b6;}"
    styleId="3275355419"
  />
</a>
`;
